# pythondatautil

./: .gitignore  README.md  pyproject.toml
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pythondatautil.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  pythondatautil.doctree
docs/_sources/: index.rst.txt  modules.rst.txt  pythondatautil.rst.txt
pythondatautil/: __init__.py  main.py  pythondatautil.py
src/pythondatautil/: __init__.py  datautil.py  tableutil.py
