[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pythondatautil"
version = "0.0.12"
authors = [
  { name="Ippei Morita", email="ippei0923@gmail.com" },
]
description = "Python Utility. File IO, Data Converter..."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]